# templito

./: Cargo.toml  readme.md
src/: boco.rs  err.rs  expr.rs  func_man.rs  impls.rs  lib.rs  parser.rs  pattern.rs  pipeline.rs  prelude.rs  scope.rs  td_parser.rs  tdata.rs  temp_man.rs  template.rs  tests.rs  tparam.rs
src/funcs/: bools.rs  bytes.rs  exec.rs  file.rs  folder.rs  format.rs  free_file.rs  lists.rs  maps.rs  math.rs  mod.rs  path.rs  random.rs  strings.rs  svg.rs  table.rs  write.rs
src/impls/: json.rs  mod.rs  t_wrap.rs  toml.rs
src/parse/: expr.rs  mod.rs  pattern.rs  tdata.rs  template.rs
test_data/: test_get.ito  test_params.ito  test_pattern.ito
