[package]
name = "templito"
version = "0.2.0"
authors = ["storyfeet <thebeaky@psmail.net>"]
edition = "2018"
keywords = ["template","language","html"]
license="MIT"
readme = "readme.md"
description = "A template language library that allows multiple parameters to pass between templates"
repository ="https://github.com/storyfeet/templito"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
#



[dependencies]

gobble = "0.6.3"
anyhow = "1.0.31"
thiserror = "1.0.20"
toml = "0.5.6"
serde_json = "1.0.57"
serde = "1.0.114"
pulldown-cmark = "0.7.2"
chrono = "0.4.15"
regex = "1.3.9"
#card_format = {path="../../cardmakers/card_format/"}
card_format = "0.1.0"

#err_tools = {path="../err_tools/"}
err_tools = "0.1.1"
rand = "0.7.3"
base64 = "0.13.0"
image = "0.23.11"
imagesize = "0.8.8"
